<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoL Bunny</string>
    <string name="s_default_region">NA</string>
    <string name="action_settings">Settings</string>
    <string name="api_key">api_key&#8211;f20528c8&#8211;4c61&#8211;429a&#8211;8689&#8211;30fd14ebd417</string>

    <string name="s_hint_summoner">Enter your summoner name</string>
    <string name="s_username">Username</string>
    <string name="s_feedback">Send feedback</string>
    <string name="s_enter">Login</string>
    <string name="s_region_status">status</string>
    
    <!-- Category list -->
    <string name="s_mastery_page">Mastery</string>
    <string name="s_rune_page">Runes</string>
    <string name="s_champion_list_page">Champions</string>
    <string name="s_match_page">Match History</string>
    <string name="s_team_page">Teams</string>
    <string name="s_item_page">Items</string>
    
   	<string name="s_acccount_error">Account does not exist.OEINROEWINROEINROEIN</string>

</resources>