<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D74A38"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin" >

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/user_summoner_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/user_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />
    
    <!-- <ExpandableListView -->

    <TextView
        android:id="@+id/champion_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_champion_list_page" />

    <TextView
        android:id="@+id/mastery_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_mastery_page" />

    <TextView
        android:id="@+id/rune_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_rune_page" />

    <TextView
        android:id="@+id/match_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_match_page" />

    <TextView
        android:id="@+id/item_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_item_page" />

    <TextView
        android:id="@+id/team_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_team_page" />

</LinearLayout>