<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#94208B"
    android:orientation="vertical"
    android:padding="30dp" >

    <TextView
        android:id="@+id/s_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/s_username"
        android:textColor="@color/grey" />

    <LinearLayout
        android:id="@+id/summoner_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_username"
        android:layout_marginLeft="@dimen/standard_half_margin"
        android:layout_marginRight="@dimen/standard_half_margin"
        android:layout_marginTop="@dimen/standard_margin" >

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/s_hint_summoner"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/region_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standard_margin"
            android:entries="@array/region_arrays" />
    </LinearLayout>

    <TextView
        android:id="@+id/account_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summoner_info"
        android:layout_centerHorizontal="true"
        android:text="@string/s_acccount_error"
        android:textColor="#D74A38"
        android:visibility="gone" />

    <Button
        android:id="@+id/enter_summoner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_not_found"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/standard_double_margin"
        android:background="@color/black"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/s_enter"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_summoner"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/region_status_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/region_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_default_region" />

        <TextView
            android:id="@+id/region_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_region_status" />
    </RelativeLayout>

    <TextView
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:text="@string/s_feedback"
        android:textColor="@color/grey"
        android:textStyle="italic" />

</RelativeLayout>